Add list of days for presentation 	modified:   raspdooh/home/pi/dooh/conf/dooh.conf

--- a/raspdooh/home/pi/dooh/conf/dooh.conf
+++ b/raspdooh/home/pi/dooh/conf/dooh.conf
@@ -1,4 +1,5 @@
 # File configuration for raspeberry pi  dooh
 H_BEGIN="7"
 H_END="18"
-DAYS="1..5" #   1 Lundi, 2 Mardi... 7 Dimanche
+DAYS="lundi mardi mercredi jeudi vendredi" #   List of days
+
